Updated to use Bot.Messenger Library

--- a/MessengerBot/Web.config
+++ b/MessengerBot/Web.config
@@ -4,6 +4,24 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Bot.Messenger.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <applicationSettings>
+    <Bot.Messenger.Settings>
+      <setting name="PageToken" serializeAs="String">
+        <value>page token</value>
+      </setting>
+      <setting name="AppSecret" serializeAs="String">
+        <value>app secret</value>
+      </setting>
+      <setting name="VerifyToken" serializeAs="String">
+        <value>hello</value>
+      </setting>
+    </Bot.Messenger.Settings>
+  </applicationSettings>
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
